--- a/ToDo.css
+++ b/ToDo.css
@@ -18,3 +18,22 @@ html, body {
     vertical-align: middle;
     text-align: center;
 }
+
+#addToDo {
+    height:50px;
+    width: 50px;
+    border: 50px;
+    vertical-align: middle;
+    font-size: 30px;
+}
+
+.to-dos {
+    margin-top: 10px;
+
+}
+
+.paragraph-styling {
+    margin: 0;
+    cursor: pointer;
+    font-size: 20px;
+}
